# ConvExa

./: .gitignore  CMakeLists.txt  Makefile  README.md  bindings.cpp  convexa-config.cmake.in  fullbuild.sh  run_me.sh
build_environment/: build_environment.def  build_me.sh  example.qsub_out  start_environment.sh  submission.pbs
cpp/: CMakeLists.txt  batch.h  batch_threshold_solve.h  convolution.h  dft.h  helper.h  main.cpp
examples/convexa-client/: CMakeLists.txt  configure_and_build.sh  main.cpp  run_me.sh
include/: MathOperation.h  convexa.h  cxkernels.h  helper.h
python/: CMakeLists.txt  bindings.cpp  pyproject.toml
python/convexa/: __init__.py
python/examples/: dft_testing.py  precision_valid.py
ref/: examples.ipynb
scripts/: configure_build_run.sh  configure_build_run_cpp.sh  configure_build_run_mac.sh
src/: CMakeLists.txt  MathOperation.cu  bindings.cpp  convexa.cpp  convexa.h  pyproject.toml
src/convolutions/: batch_convolve.cu  device_convolve.cu  device_convolve_fft.cu  device_convolve_overlap_save.cu  host_convolve.cpp
src/dfts/: cufft.cu  device_dft.cu  device_fft_radix2.cu  host_dft.cpp  host_fft_radix2.cpp
validation/: precision_valid.py
