[build-system]
requires = ["scikit-build-core>=0.5.1"]
build-backend = "scikit_build_core.build"

[project]
name = "convexa"
version = "0.1.0"
dependencies = []
description = "A High Performance Signal Processing Library"
requires-python = ">=3.7"

[tool.scikit-build]
cmake.targets = ["convexa"] # Target name is now convexa
cmake.minimum-version = "3.15"
